<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed"
        app:showAsAction="always"
        android:title="@string/menu_feed" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always"
        android:title="@string/menu_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        app:showAsAction="always"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="always"
        android:title="@string/menu_sign_out" />

</menu>