<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_12_dp"
            android:layout_margin="@dimen/dimen_16_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_32_dp">

                <TextView
                    android:id="@+id/titleTextView"
                    style="@style/HeadlineText.Regular.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8_dp"
                    android:padding="@dimen/dimen_8_dp"
                    android:text="@string/title_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.sehatq.testapplication.core.widget.TextField
                    android:id="@+id/usernameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16_dp"
                    app:titleHint="@string/label_username"
                    app:fieldHint="@string/hint_username"
                    app:fieldType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

                <com.sehatq.testapplication.core.widget.TextField
                    android:id="@+id/passwordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16_dp"
                    app:titleHint="@string/label_password"
                    app:fieldHint="@string/hint_password"
                    app:fieldType="password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameTextField" />

                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:id="@+id/rememberCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16_dp"
                    android:checkMark="@null"
                    android:checked="true"
                    android:drawableStart="@drawable/selector_check_box"
                    android:drawableLeft="@drawable/selector_check_box"
                    android:drawablePadding="@dimen/dimen_8_dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:padding="@dimen/dimen_8_dp"
                    android:text="@string/label_remember_me"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_xsmall"
                    app:layout_constraintEnd_toStartOf="@+id/loginButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    style="@style/ButtonPrimary"
                    android:padding="@dimen/dimen_8_dp"
                    android:layout_margin="@dimen/dimen_16_dp"
                    android:text="@string/title_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/facebookButton"
                    style="@style/ButtonFacebook"
                    android:textAlignment="center"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16_dp"
                    android:padding="@dimen/dimen_8_dp"
                    android:text="@string/title_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/googleButton"
                    style="@style/ButtonGoogle"
                    android:drawableLeft="@drawable/ic_google"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16_dp"
                    android:padding="@dimen/dimen_8_dp"
                    android:text="@string/title_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>